VQ-1248: implemented i18n for entity tables

--- a/src/app/features/base/components/dashboard/dashboard.component.html
+++ b/src/app/features/base/components/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="base-content-section home">
-  <h5 class="section-title">{{'lang.home' | translate}}</h5>
+  <h5 class="section-title">{{'base.home' | translate}}</h5>
   <div class="row">
       <div class="col-sm-4 col-12">
         <app-tickets-summary></app-tickets-summary>
@@ -13,7 +13,7 @@
 </div>
 
 <div class="base-content-section dashboard">
-  <h5 class="section-title" routerLink="/home/reportsv2/create-dashboard">{{'lang.my_dashbaord' | translate}}</h5>
+  <h5 class="section-title" routerLink="/home/reportsv2/create-dashboard">{{'base.my_dashbaord' | translate}}</h5>
   <div class="row">
       <div class="col-sm-6 col-12">
         <div class="card">
@@ -45,7 +45,7 @@
   <div class="row">
     <!-- BEGINS QUOTATION LIST (LMS/GIS) -->
     <div class="col-sm-6">
-      <p class="transactions">{{'lang.my_policies' | translate}}</p>
+      <p class="transactions">{{'base.my_policies' | translate}}</p>
 
       <ul class="nav nav-tabs" id="myTabs" role="tablist">
         <li class="nav-item" role="presentation">
@@ -137,7 +137,7 @@
 
     <!-- BEGINS POLICY LIST (LMS/GIS) -->
     <div class="col-sm-6" id="lms-gis-policy-list">
-      <p class="transactions">{{'lang.my_quotations' | translate}}</p>
+      <p class="transactions">{{'base.my_quotations' | translate}}</p>
       <ul class="nav nav-tabs" id="myTabs2" role="tablist2">
         <li class="nav-item" role="presentation">
           <a class="nav-link active" id="lms2-tab" data-bs-toggle="tab" href="#lms2" role="tab" aria-controls="lms2" aria-selected="true">LMS</a>
