--- a/src/app/features/base/components/dashboard/tickets-summary/tickets-summary.component.html
+++ b/src/app/features/base/components/dashboard/tickets-summary/tickets-summary.component.html
@@ -2,7 +2,7 @@
   <div class="card-body">
     <div class="row">
       <div class="col-sm-9 col-9">
-        <h5 class="card-title">{{'lang.tickets' | translate}}</h5>
+        <h5 class="card-title">{{'base.tickets' | translate}}</h5>
       </div>
       <div class="col-sm-2 col-2">
         <span class="text-danger fw-bold">{{ticketCountTotal ? ticketCountTotal : 0}}</span>
@@ -13,8 +13,8 @@
         <table class="table table-borderless">
           <thead>
           <tr>
-            <th>{{'lang.tickets' | translate}}</th>
-            <th class="align-center">{{'lang.no_of_tickets' | translate}}</th>
+            <th>{{'base.tickets' | translate}}</th>
+            <th class="align-center">{{'base.no_of_tickets' | translate}}</th>
           </tr>
           </thead>
           <tbody>
@@ -45,8 +45,8 @@
         <table class="table table-borderless">
           <thead>
           <tr>
-            <th>{{'lang.tickets' | translate}}</th>
-            <th class="align-center">{{'lang.no_of_tickets' | translate}}</th>
+            <th>{{'base.tickets' | translate}}</th>
+            <th class="align-center">{{'base.no_of_tickets' | translate}}</th>
           </tr>
           </thead>
           <tbody>
@@ -62,7 +62,7 @@
   </div>
   <div class="card-footer border-top-0" style="background-color: #ffffff">
     <div class="text-end" style="padding-bottom: 1rem;">
-      <a class="text-end-view" (click)="goToViewTickets()" >{{'lang.view_all' | translate | uppercase }}</a>
+      <a class="text-end-view" (click)="goToViewTickets()" >{{'base.view_all' | translate | uppercase }}</a>
     </div>
   </div>
 </div>
