--- a/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
+++ b/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
@@ -20,7 +20,7 @@
               class="fa-solid fa-house-chimney"
               style="padding-right: 6px"
             ></i>
-              {{ "lang.dashboard" | translate | uppercase }}
+              {{ "base.dashboard" | translate | uppercase }}
             </a>
           </li>
           <li class="nav-item" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -32,7 +32,7 @@
               class="fa-solid fa-file-invoice-dollar"
               style="padding-right: 6px"
             ></i>
-              {{ "lang.accounts" | translate | uppercase }}
+              {{ "base.accounts" | translate | uppercase }}
             </a>
           </li>
           <li class="nav-item" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -43,7 +43,7 @@
               class="fa-solid fa-quote-right"
               style="padding-right: 6px"
             ></i>
-              {{ "lang.quotation" | translate | uppercase }}
+              {{ "base.quotation" | translate | uppercase }}
             </a>
           </li>
           <li class="nav-item" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -52,7 +52,7 @@
                 class="fa-solid fa-building-shield"
                 style="padding-right: 6px"
               ></i>
-              {{ "lang.policy" | translate | uppercase }}
+              {{ "base.policy" | translate | uppercase }}
             </a>
           </li>
           <li class="nav-item" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -61,7 +61,7 @@
                 class="fa-solid fa-handshake-angle"
                 style="padding-right: 6px"
               ></i>
-              {{ "lang.tickets" | translate | uppercase }}
+              {{ "base.tickets" | translate | uppercase }}
             </a>
           </li>
           <li class="nav-item" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -70,7 +70,7 @@
                 class="fa-solid fa-people-group"
                 style="padding-right: 6px"
               ></i>
-              {{ "lang.team" | translate | uppercase }}
+              {{ "base.team" | translate | uppercase }}
             </a>
           </li>
           <!-- <li class="nav-item">
@@ -79,7 +79,7 @@
                 class="fa-solid fa-toolbox"
                 style="padding-right: 6px"
               ></i>
-              {{ "lang.administration" | translate | uppercase }}
+              {{ "base.administration" | translate | uppercase }}
             </a>
           </li> -->
 
@@ -96,7 +96,7 @@
                 class="fa-solid fa-toolbox"
                 style="padding-right: 6px; font-size: 16px"
               ></i
-              >{{ "lang.administration" | translate | uppercase }}
+              >{{ "base.administration" | translate | uppercase }}
             </a>
             <ul class="dropdown-menu" data-bs-toggle="collapse" data-bs-target="#navbarNav">
               <ng-container *ngFor="let admin of administationSubMenuList">
@@ -121,14 +121,14 @@
                   class="fa-solid fa-chart-simple"
                   style="padding-right: 6px"
                 ></i
-                >{{ "lang.new_report" | translate | uppercase }}</a
+                >{{ "base.new_report" | translate | uppercase }}</a
               >
             </li>
             <li class="nav-item" style="font-size: 15px">
               <a class="nav-link" routerLink="./reportsv2"
                  (click)="dynamicSideBarMenu(analyticsSubMenuList[2])"
                 ><i class="fa-solid fa-chart-pie" style="padding-right: 6px"></i
-                >{{ "lang.analytics" | translate | uppercase }}</a
+                >{{ "base.analytics" | translate | uppercase }}</a
               >
             </li>
           </ul>
@@ -159,7 +159,7 @@
                 class="fa-solid fa-house-chimney"
                 style="padding-right: 6px"
               ></i
-              >{{ "lang.dashboard" | translate | uppercase }}</a
+              >{{ "base.dashboard" | translate | uppercase }}</a
             >
           </li>
           <li class="nav-item dropdown">
@@ -174,7 +174,7 @@
                 class="fa-solid fa-file-invoice-dollar"
                 style="padding-right: 6px; font-size: 16px"
               ></i
-              >{{ "lang.accounts" | translate | uppercase }}
+              >{{ "base.accounts" | translate | uppercase }}
             </a>
             <ul
               class="dropdown-menu"
@@ -272,7 +272,7 @@
               aria-expanded="false"
               style="font-size: 12px"
             >
-              <i class="fa-solid fa-quote-right" style="padding-right: 6px; font-size: 16px"></i>{{ "lang.quotation" | translate | uppercase }}
+              <i class="fa-solid fa-quote-right" style="padding-right: 6px; font-size: 16px"></i>{{ "base.quotation" | translate | uppercase }}
             </a>
             <ul
               class="dropdown-menu"
@@ -368,7 +368,7 @@
                 class="fa-solid fa-building-shield"
                 style="padding-right: 6px; font-size: 16px"
               ></i
-              >{{ "lang.policy" | translate | uppercase }}
+              >{{ "base.policy" | translate | uppercase }}
             </a>
             <ul class="dropdown-menu">
               <ng-container *ngFor="let team of policySubMenuList">
@@ -393,7 +393,7 @@
                 class="fa-solid fa-handshake-angle"
                 style="padding-right: 6px; font-size: 16px"
               ></i
-              >{{ "lang.reinsurance" | translate | uppercase }}
+              >{{ "base.reinsurance" | translate | uppercase }}
             </a>
             <ul class="dropdown-menu">
               <ng-container *ngFor="let claim of reinsuranceubMenuList">
@@ -431,7 +431,7 @@
                 class="fa-solid fa-people-group"
                 style="padding-right: 6px; font-size: 16px"
               ></i
-              >{{ "lang.team" | translate | uppercase }}
+              >{{ "base.team" | translate | uppercase }}
             </a>
             <ul class="dropdown-menu">
               <ng-container *ngFor="let team of teamSubMenuList">
@@ -456,7 +456,7 @@
                 class="fa-solid fa-toolbox"
                 style="padding-right: 6px; font-size: 16px"
               ></i
-              >{{ "lang.administration" | translate | uppercase }}
+              >{{ "base.administration" | translate | uppercase }}
             </a>
             <ul class="dropdown-menu">
               <ng-container *ngFor="let admin of administationSubMenuList">
@@ -480,14 +480,14 @@
                   class="fa-solid fa-chart-simple"
                   style="padding-right: 6px"
                 ></i
-                >{{ "lang.new_report" | translate | uppercase }}</a
+                >{{ "base.new_report" | translate | uppercase }}</a
               >
             </li>
             <li class="nav-item" style="font-size: 15px">
               <a class="nav-link" routerLink="./reportsv2"
                  (click)="dynamicSideBarMenu(analyticsSubMenuList[2])"
                 ><i class="fa-solid fa-chart-pie" style="padding-right: 6px"></i
-                >{{ "lang.analytics" | translate | uppercase }}</a
+                >{{ "base.analytics" | translate | uppercase }}</a
               >
             </li>
           </ul>
