--- a/src/app/features/entities/components/staff/list-staff/list-staff.component.html
+++ b/src/app/features/entities/components/staff/list-staff/list-staff.component.html
@@ -2,7 +2,7 @@
   <!-- Top Header Text and Breadcrumb !-->
   <div class="d-flex justify-content-between my-4 ">
     <div class="mr-auto p-2">
-      <h4 class="htxt page-header">Users</h4>
+      <h4 class="htxt page-header">{{ 'entities.users' | translate }}</h4>
     </div>
     <div class="me-4">
       <app-dynamic-breadcrumb [breadCrumbItems]="staffBreadCrumbItems">
@@ -12,9 +12,15 @@
 
   <!-- Top Buttons !-->
   <div class="d-flex my-4">
-    <button type="button" class="btn btn-primary rounded-1 px-3 me-3" (click)="gotoEntityPage()">New {{activeTab2 === 'Individual' ? 'Staff' : 'Group'}}</button>
-    <button type="button" class="btn btn-outline-primary px-4 me-3">Import Users</button>
-    <button type="button" class="btn filter-btn rounded-1 px-4 me-3"> <i class="fa fa-filter pe-2"></i>Filter</button>
+    <button type="button" class="btn btn-primary rounded-1 px-3 me-3" (click)="gotoEntityPage()">
+      {{ 'entities.new' | translate }} {{activeTab2 === 'Individual' ? 'Staff' : 'Group' | translate }}
+    </button>
+    <button type="button" class="btn btn-outline-primary px-4 me-3">
+      {{ 'entities.import_users' | translate }}
+    </button>
+    <button type="button" class="btn filter-btn rounded-1 px-4 me-3">
+      <i class="fa fa-filter pe-2"></i>{{ 'entities.filter' | translate }}
+    </button>
   </div>
 
   <!-- Tabs and Tab Content !-->
@@ -64,22 +70,22 @@
           <ng-template pTemplate="header">
             <tr>
               <th pSortableColumn="name">
-                User
+                {{ 'entities.user' | translate }}
                 <p-sortIcon field="name"></p-sortIcon>
               </th>
               <th pSortableColumn="userType">
-                User type
+                {{ 'entities.user_type' | translate }}
                 <p-sortIcon field="userType"></p-sortIcon>
               </th>
               <th pSortableColumn="emailAddress">
-                Email
+                {{ 'entities.email' | translate }}
                 <p-sortIcon field="emailAddress"></p-sortIcon>
               </th>
               <th pSortableColumn="status">
-                Status
+                {{ 'entities.status' | translate }}
                 <p-sortIcon field="status"></p-sortIcon>
               </th>
-              <th class="head">Actions</th>
+              <th class="head">{{ 'entities.actions' | translate }}</th>
             </tr>
             <tr>
               <th>
@@ -103,7 +109,7 @@
               <td>
                 <div class="actions">
                   <button type="button" class="btn btn-link text-primary" (click)="viewDetailsWithId(individualUser.id)">
-                    <i class="pi pi-eye" style="padding: 0 2px 0 0;"> </i>view
+                    <i class="pi pi-eye" style="padding: 0 2px 0 0;"> </i>{{ 'entities.view' | translate }}
                   </button>
                 </div>
               </td>
@@ -111,7 +117,7 @@
           </ng-template>
           <ng-template pTemplate="emptymessage">
             <tr>
-              <td colspan="8">No Data Found.</td>
+              <td colspan="8">{{ 'entities.no_data_found' | translate }}</td>
             </tr>
           </ng-template>
         </p-table>
@@ -146,22 +152,22 @@
           <ng-template pTemplate="header">
             <tr>
               <th pSortableColumn="name">
-                Name
+                {{ 'entities.name' | translate }}
                 <p-sortIcon field="name"></p-sortIcon>
               </th>
               <th pSortableColumn="userType">
-                User type
+                {{ 'entities.user_type' | translate }}
                 <p-sortIcon field="userType"></p-sortIcon>
               </th>
               <th pSortableColumn="emailAddress">
-                Email
+                {{ 'entities.email' | translate }}
                 <p-sortIcon field="emailAddress"></p-sortIcon>
               </th>
               <th pSortableColumn="status">
-                Status
+                {{ 'entities.status' | translate }}
                 <p-sortIcon field="status"></p-sortIcon>
               </th>
-              <th class="head">Actions</th>
+              <th class="head">{{ 'entities.actions' | translate }}</th>
             </tr>
             <tr>
               <th>
@@ -193,7 +199,7 @@
           </ng-template>
           <ng-template pTemplate="emptymessage">
             <tr>
-              <td colspan="8">No Data Found.</td>
+              <td colspan="8">{{ 'entities.no_data_found' | translate }}</td>
             </tr>
           </ng-template>
         </p-table>
